# ih-lib61850-node

./: .gitignore  .npmignore  CMakeCache.txt  CMakeLists.txt  CPackConfig.cmake  CPackSourceConfig.cmake  binding.gyp  package-lock.json  package.json  readme.md
.github/workflows/: build.yml
builds/linux_arm/: addon_iec61850.node
builds/linux_arm64/: addon_iec61850.node
builds/linux_x64/: addon_iec61850.node
builds/macos_arm64/: addon_iec61850-max.node  addon_iec61850.node
builds/macos_x64/: addon_iec60870.node  addon_iec61850.node
builds/windows_x64/: addon_iec60870.node  addon_iec61850.node
examples/: index_iec61850_client2.js
include/: mbedcrypto.lib  mbedtls.lib  mbedx509.lib
src/: addon.cc  goose_subscriber.cc  goose_subscriber.h  mms_client worked.cc  mms_client.cc  mms_client.h
